--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -17,3 +17,92 @@ html,body {
 a,a:link,a:visited,a:hover,a:active {
     text-decoration: none;
 }
+.lt-side {
+    width: 180px;
+    height: 100%;
+    background-color: #222d32;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: all 1s;
+    z-index: 999;
+}
+.brand a {
+    display: block;
+    width: 180px;
+    height: 50px;
+    background-color: #367fa9;
+    text-align: center;
+    line-height: 50px;
+    font-size: 24px;
+    color: #fff;
+}
+.user {
+    height: 150px;
+    width: 180px;
+}
+.user img {
+    width: 80px;
+    height: 80px;
+    margin :30px auto 0;
+    border-radius: 50%;
+    display: block;
+}
+
+.user p {
+    height: 40px;
+    line-height:40px;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.nav li a {
+    display: block;
+    height: 40px;
+    line-height: 40px;
+    color: #ccc;
+    border-left: 3px solid transparent;
+    text-indent: 20px;
+}
+.nav li a.now {
+    color: #fff;
+    background-color: #1d1f21;
+    border-color: #069;
+}
+
+.nav li .sencond {
+    display: none;
+}
+.nav li .sencond a {
+    text-indent: 66px;
+}
+
+.main {
+    padding-left: 180px;
+    padding-top: 70px;
+
+}
+
+.lt-header-nav {
+    height: 50px;
+    background-color: #3c8dbc;
+    padding: 0 20px 0 200px;
+    margin-bottom: 20px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 998;
+    transition: all 1s;
+}
+.lt-header-nav a {
+    font-size: 16px;
+    color: #fff;
+    line-height:50px;
+}
+
+.char1,.char2 {
+    width: 45%;
+    height:400px;
+}
