--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -115,7 +115,7 @@ a,a:link,a:visited,a:hover,a:active {
     margin-bottom: 20px;
 }
 
-#uploadfile {
+#fileupload {
     width:100%;
     height: 100%;
     opacity:0;
@@ -125,5 +125,7 @@ a,a:link,a:visited,a:hover,a:active {
 }
 
 .fileupload {
+    width: 82px;
+    height: 34px;
     position: relative;
 }
