--- a/public/font/css/common.css
+++ b/public/font/css/common.css
@@ -11,6 +11,7 @@ body {
     min-width:320px;
     max-width:640px;
     position: relative;
+    margin:0 auto;
 }
 
 * {
@@ -41,7 +42,7 @@ body {
 .main {
     height: 100%;
     width: 100%;
-    /*background-color: yellow;*/
+    background-color: #fff;
     overflow: hidden;
     position: relative;
 }
@@ -87,4 +88,50 @@ img {
 
 .lt_footer li a p {
     color: #fff;
+}
+
+
+.search {
+    padding:10px;
+    position: relative;
+}
+
+.search input {
+    height: 34px;
+    border-radius: 5px;
+    font-size: 12px;
+    text-indent: 8px;
+}
+.search_btn {
+    position: absolute;
+    top:10px;
+    right:10px;
+    border-radius: 0 5px 5px 0;
+}
+.lt_product {
+    padding:10px;
+}
+.lt_product a {
+    text-align: center;
+    float: left;
+    width:48%;
+    display: block;
+    padding:10px;
+    border:1px solid #ccc;
+    margin-bottom: 2%;
+}
+
+.lt_product .newpirce {
+    color: red;
+}
+.lt_product .oldpirce {
+    text-decoration: line-through;
+    padding-left: 5px;
+}
+
+.lt_product a:nth-child(2n){
+    margin-left: 2%;
+}
+.lt_product a:nth-child(2n+1){
+    margin-left: 1%;
 }
